--- a/css/style.css
+++ b/css/style.css
@@ -1,556 +1,552 @@
 /* || STYLE GENERAL */
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-a, a:focus, a:active {
-    text-decoration: none;  /* On enlève la décoration */
-    color: #000000;
+a,
+a:focus,
+a:active {
+  text-decoration: none; /* On enlève la décoration */
+  color: #000000;
 }
 
 /* "Trouvez votre hébergement..." */
 h1 {
-    font-size: 21px;
+  font-size: 21px;
 }
 
 /* "Hébergements à Marseille", "Les plus populaires" et "Activités à Marseille" */
 h2 {
-    font-size: 20px;
-
+  font-size: 20px;
 }
 
 /* Pour chaque titre de card */
 h3 {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 body {
-    font-family: 'Raleway', serif;
-    display: flex;
-    flex-direction: column;
+  font-family: "Raleway", serif;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Pour chaque étoile "vide" */
 .empty-star {
-    color: #d9d9d9;
+  color: #d9d9d9;
 }
 
 /* Prix hébergement */
 .price {
-    font-size: 13px;
+  font-size: 13px;
 }
 
 /* Quand un prix est bas */
 .hot-price {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 /* Note étoiles */
 .rating {
-    width: 68px;
-    font-size: 12px;
-    color: #0065FC;
-    display: flex;
-    justify-content: space-between;
+  width: 68px;
+  font-size: 12px;
+  color: #0065fc;
+  display: flex;
+  justify-content: space-between;
 }
 
 .fa-star {
-    font-size: 11px;
+  font-size: 11px;
 }
 
 /* || HEADER */
 
 header {
-    width: 93%;
-    max-width: 1340px;
-    margin: 0 auto 0 auto;
-    display: flex;
-    justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
+  width: 93%;
+  max-width: 1340px;
+  margin: 0 auto 0 auto;
+  display: flex;
+  justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
 }
 
 /* Logo */
 header img {
-    width: 95.5px;
-    height: 45px;
-    margin: 34px 0 0 3%;
+  width: 95.5px;
+  height: 45px;
+  margin: 34px 0 0 3%;
 }
 
 header ul {
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    display: flex;
-    justify-content: space-around;  /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
-    align-items: baseline; /* On aligne en bas */
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-around; /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
+  align-items: baseline; /* On aligne en bas */
 }
 
 header li {
-    padding: 45px 22px 0px 22px;    /* Permet d'avoir la bordure tout en haut */
-    border-top: 2px solid transparent;  /* Evite le décalage du texte lors du hover */
+  padding: 45px 22px 0px 22px; /* Permet d'avoir la bordure tout en haut */
+  border-top: 2px solid transparent; /* Evite le décalage du texte lors du hover */
 }
 
 /* Bordure devient bleu quand la souris passe sur le li */
 header li:hover {
-    border-top: 2px solid #0065FC;
+  border-top: 2px solid #0065fc;
 }
 
 /* Hébergements et Activités deviennent bleu au passage de la souris */
 header li:hover a {
-    color: #0065FC;
+  color: #0065fc;
 }
-
 
 /* || MAIN */
 main {
-    width: 93%;
-    max-width: 1340px;
-    margin: 2% auto 4% auto;
-    flex: 1 0 auto;
+  width: 93%;
+  max-width: 1340px;
+  margin: 2% auto 4% auto;
+  flex: 1 0 auto;
 }
 
 /* "En plein centre ville..." */
 .search-filters p {
-    font-size: 16px;
-    font-weight: normal;
+  font-size: 16px;
+  font-weight: normal;
 }
-
 
 /* || BARRE DE RECHERCHE */
 
 .search-bar {
-    margin: 1% 0 0 0;
-    display: flex;
+  margin: 1% 0 0 0;
+  display: flex;
 }
 
 .fa-location-dot {
-    height: 50px;
-    width: 50px;
-    border-top-left-radius: 20px 20px;
-    border-bottom-left-radius: 20px 20px;
-    background-color: #F2F2F2;
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 50px;
+  width: 50px;
+  border-top-left-radius: 20px 20px;
+  border-bottom-left-radius: 20px 20px;
+  background-color: #f2f2f2;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Champ de recherche */
 .search {
-    width: 236px;
-    height: 50px;
-    border: 0px;
-    border-top: 1px solid #F2F2F2;
-    border-bottom: 1px solid #F2F2F2;
-    padding: 0 0 0 16px; /* On se décale un peu de la gauche */
-    font-size: 16px;
-    font-weight: bold;
+  width: 236px;
+  height: 50px;
+  border: 0px;
+  border-top: 1px solid #f2f2f2;
+  border-bottom: 1px solid #f2f2f2;
+  padding: 0 0 0 16px; /* On se décale un peu de la gauche */
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .search-button {
-    width: 130px;
-    border-top-right-radius: 20px 20px; /* On arrondit l'angle supérieur droit */
-    border-bottom-right-radius: 20px 20px;  /* On arrondit l'angle inférieur droit */
-    border: 0px solid;
-    background-color: #0065FC;
-    font-size: 16px;
-    font-weight: bold;
-    color: #ffffff;
+  width: 130px;
+  border-top-right-radius: 20px 20px; /* On arrondit l'angle supérieur droit */
+  border-bottom-right-radius: 20px 20px; /* On arrondit l'angle inférieur droit */
+  border: 0px solid;
+  background-color: #0065fc;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
 }
 
 .search-button:before {
-    content:"Rechercher";
+  content: "Rechercher";
 }
-
-
 
 /* || FILTRES ET RESULTATS */
 
 .filters-results {
-    height: 112px;
-    max-width: 929px;
-    margin: 0 0 0 1%;
+  height: 112px;
+  max-width: 929px;
+  margin: 0 0 0 1%;
 }
 
 .filters-list {
-    margin: 2% 0 0 9px;
-    display: flex;    /* Permettre à la phrase de revenir à la ligne */
-    flex-wrap: wrap;
-    align-items: center;
+  margin: 2% 0 0 9px;
+  display: flex; /* Permettre à la phrase de revenir à la ligne */
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 /* "Filtres" */
 .filters-list span {
-    font-weight: bold;  /* "Filtres" en gras */
-    font-size: 17px;
+  font-weight: bold; /* "Filtres" en gras */
+  font-size: 17px;
 }
 
 /* Chaque filtre */
 .filters {
-    margin: 5px 0 5px 30px;
-    border: 2px solid #d9d9d9;
-    border-left: 0px;
-    border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
-    background-color: #ffffff;
-    color: #000000;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  margin: 5px 0 5px 30px;
+  border: 2px solid #d9d9d9;
+  border-left: 0px;
+  border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
+  background-color: #ffffff;
+  color: #000000;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Logo filtre */
 .filters .fa-solid {
-    width: 50px;
-    height: 45px;
-    background-color: #DEEBFF;
-    border-radius: 100px 100px 100px 100px; /* Cercle */
-    color: #0065FC;
-    font-size: 17px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 50px;
+  height: 45px;
+  background-color: #deebff;
+  border-radius: 100px 100px 100px 100px; /* Cercle */
+  color: #0065fc;
+  font-size: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .filters:hover {
-    background-color: #0065FC;
-    color: #ffffff;
+  background-color: #0065fc;
+  color: #ffffff;
 }
 
 .filters:hover .fa-solid {
-    color: #0065FC; /* On laisse l'icone en bleu */
+  color: #0065fc; /* On laisse l'icone en bleu */
 }
 
 /* Intitulé filtre */
 .filters span {
-    padding: 0 20px 0 10px;
+  padding: 0 20px 0 10px;
 }
 
 /* Dimensions de la div avec logo + phrase */
 .results {
-    margin: 3% 0 0 0;
-    font-size: 16px;
-    display: flex;
-    align-items: center;
+  margin: 3% 0 0 0;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
 }
 
 .fa-info {
-    width: 24px;
-    height: 24px;
-    border-radius: 100px 100px 100px 100px; /* Cercle */
-    border: 1px solid #d9d9d9;
-    font-size: 12px;
-    color: #0065FC;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 100px 100px 100px 100px; /* Cercle */
+  border: 1px solid #d9d9d9;
+  font-size: 12px;
+  color: #0065fc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Phrase nombre de résultats */
 .results p {
-    margin: 0 0 0 10px;
+  margin: 0 0 0 10px;
 }
 
 /* Div hébergements et populaires */
 .lodgings-popular {
-    margin: 36px 0 0 0;
-    display: flex;
-    justify-content: space-between;
+  margin: 36px 0 0 0;
+  display: flex;
+  justify-content: space-between;
 }
-
 
 /* || HEBERGEMENTS MARSEILLE */
 
 #lodgings {
-    width: 65%;
-    background-color: #F2F2F2;
-    border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding: 0 3% 0 3%;
+  width: 65%;
+  background-color: #f2f2f2;
+  border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
+  padding: 0 3% 0 3%;
 }
 
 /* "Hébergements à Marseille" */
 #lodgings h2 {
-    width: 100%;
-    margin: 35px 0 7px 0;
+  width: 100%;
+  margin: 35px 0 7px 0;
 }
 
 .lodging-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 /* Encadré blanc card hébergement */
 .lodging-list a {
-    width: 31%;
-    margin: 2% 0 2% 0;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
-    box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
-    background-color: #ffffff;
+  width: 31%;
+  margin: 2% 0 2% 0;
+  padding: 5px;
+  border-radius: 20px 20px 20px 20px;
+  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
+    0px -4px 6px #eaeaea;
+  background-color: #ffffff;
 }
 
 /* Card hébergement */
 .lodging {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .lodging-image {
-    height: 110px;
+  height: 110px;
 }
 
 /* Miniature de card hébergement */
 .lodging img {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px 20px 0 0;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px 20px 0 0;
+  object-fit: cover;
 }
 
 .lodging figcaption {
-    padding: 0 0 0 4%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+  padding: 0 0 0 4%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .lodging h3 {
-    padding: 4% 0 0 0;
+  padding: 4% 0 0 0;
 }
 
 .lodging .price {
-    padding: 1% 0 0 0;
+  padding: 1% 0 0 0;
 }
 
 .lodging .rating {
-    padding: 3% 0 3% 0;
+  padding: 3% 0 3% 0;
 }
 
 /* "Afficher plus" */
 .show-more {
-    width: 100%;
-    margin: 3% 0 5% 0;
-    font-size: 16px;
-    font-weight: bold;
+  width: 100%;
+  margin: 3% 0 5% 0;
+  font-size: 16px;
+  font-weight: bold;
 }
-
 
 /* || LES PLUS POPULAIRES */
 
 .most-popular {
-    width: 31%;
-    border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
-    padding: 0 3% 0 3%;
-    background-color: #F2F2F2;
-    flex-shrink: 2;
+  width: 31%;
+  border-radius: 20px 20px 20px 20px; /* Arrondi bordure */
+  padding: 0 3% 0 3%;
+  background-color: #f2f2f2;
+  flex-shrink: 2;
 }
 
 /* "Les plus populaires" */
 .most-popular h2 {
-    margin: 35px 0 7px 0;
-    display: inline-block;
+  margin: 35px 0 7px 0;
+  display: inline-block;
 }
 
 /* Etoile "Les plus populaires" */
 .most-popular-star {
-    margin: 35px 0 7px 0;
-    font-size: 20px;
-    float: right;
+  margin: 35px 0 7px 0;
+  font-size: 20px;
+  float: right;
 }
 
 .popular-list {
-    margin: 5% 0 0 0;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
+  margin: 5% 0 0 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* Encadré blanc card populaire */
 .popular-list a {
-    margin: 0 0 8% 0;
-    padding: 5px;
-    border-radius: 20px 20px 20px 20px;
-    background-color: #ffffff;
-    box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
+  margin: 0 0 8% 0;
+  padding: 5px;
+  border-radius: 20px 20px 20px 20px;
+  background-color: #ffffff;
+  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
+    0px -4px 6px #eaeaea;
 }
 
 /* Card populaire */
 .popular {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .popular-image {
-    width: 120px;
-    height: 130px;
+  width: 120px;
+  height: 130px;
 }
 
 /* Miniature card populaire */
 .popular img {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px 0 0 20px;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px 0 0 20px;
+  object-fit: cover;
 }
 
 /* Légende card populaire */
 .popular figcaption {
-    padding: 0 0 0 4%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    flex: 1;
+  padding: 0 0 0 4%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  flex: 1;
 }
 
 .popular h3 {
-    width: 85%;
-    padding: 4% 0 0 0;
+  width: 85%;
+  padding: 4% 0 0 0;
 }
 
 /* Prix populaire */
 .popular .price {
-    padding: 5% 0 0 0;
-    flex-grow: 1;
+  padding: 5% 0 0 0;
+  flex-grow: 1;
 }
 
 /* Note populaire */
 .popular .rating {
-    padding: 3% 0 3% 0;
+  padding: 3% 0 3% 0;
 }
-
 
 /* || ACTIVITES MARSEILLE */
 
 /* "Activités à Marseille" */
 #activities h2 {
-    margin: 50px 0 0 0;
+  margin: 50px 0 0 0;
 }
 
 /* Div avec les cards activités */
 .activities-list {
-    height: 446px;
-    margin: 25px 0 0 0;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  height: 446px;
+  margin: 25px 0 0 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-    width: 22%;
-    height: 100%;
-    border-radius: 20px 20px 20px 20px;
-    background-color: #ffffff;
-    box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea, 0px -4px 6px #eaeaea;
+  width: 22%;
+  height: 100%;
+  border-radius: 20px 20px 20px 20px;
+  background-color: #ffffff;
+  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
+    0px -4px 6px #eaeaea;
 }
 
 /* Encadré 2eme card */
 .activities-list a:nth-child(2) {
-    height: 48%;
+  height: 48%;
 }
 
 /* Encadré 3eme card */
 .activities-list a:nth-child(3) {
-    height: 37%;
+  height: 37%;
 }
 
 /* Encadré 5eme card */
 .activities-list a:nth-child(5) {
-    height: 44%;
+  height: 44%;
 }
 
 /* Encadré 6eme card */
 .activities-list a:nth-child(6) {
-    height: 47%;
+  height: 47%;
 }
 
 /* Miniature 2eme card */
 .activities-list a:nth-child(2) img {
-    height: 79%;
+  height: 79%;
 }
 
 /* Miniature 3eme card */
 .activities-list a:nth-child(3) img {
-    height: 72%;
+  height: 72%;
 }
 
 /* Miniature 5eme card */
 .activities-list a:nth-child(5) img {
-    height: 76%;
+  height: 76%;
 }
 
 /* Miniature 6eme card */
 .activities-list a:nth-child(6) img {
-    height: 76%;
+  height: 76%;
 }
 
 /* Card activité */
 .activity {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Miniature card activité */
 .activity img {
-    width: 100%;
-    height: 400px;
-    border-radius: 20px 20px 0 0;
-    object-fit: cover;
+  width: 100%;
+  height: 400px;
+  border-radius: 20px 20px 0 0;
+  object-fit: cover;
 }
 
 /* Pour chaque légende de card activité */
 .activity figcaption {
-    margin: 5% 0 5% 5%;
+  margin: 5% 0 5% 5%;
 }
-
 
 /* || Footer */
 
 footer {
-    background-color: #F2F2F2;
-    flex-shrink: 0;
+  background-color: #f2f2f2;
+  flex-shrink: 0;
 }
 
 .footer-list {
-    width: 93%;
-    max-width: 1340px;
-    margin: 0 auto 0 auto;
-    padding: 3% 2% 4% 2%;
-    display: flex;
+  width: 93%;
+  max-width: 1340px;
+  margin: 0 auto 0 auto;
+  padding: 3% 2% 4% 2%;
+  display: flex;
 }
 
 /* Tout le contenu de chaque div */
 footer li {
-    margin: 0 0 14px 0;
-    font-size: 15px;
+  margin: 0 0 14px 0;
+  font-size: 15px;
 }
 
 /* Titre de liste */
 footer p {
-    margin: 0 0 22px 0;
-    font-size: 17px;
-    font-weight: bold;
+  margin: 0 0 22px 0;
+  font-size: 17px;
+  font-weight: bold;
 }
 
 /* Espacement entre A propos et Nos Hébergements */
 .about {
-    margin: 0 228px 0 0;
+  margin: 0 228px 0 0;
 }
 
 /* Espacement entre Nos Hébergements et Assistance */
 .our-lodgings {
-    margin: 0 292px 0 0;
+  margin: 0 292px 0 0;
 }
