--- a/css/mobile/m-bp1.css
+++ b/css/mobile/m-bp1.css
@@ -1,55 +1,9 @@
 /* || STYLE GENERAL */
 
-/* "Trouvez votre hébergement..." */
-h1 {
-  font-size: 21px;
-}
-
-/* "Hébergements à Marseille", "Les plus populaires" et "Activités à Marseille" */
-h2 {
-  font-size: 20px;
-}
-
-/* Pour chaque titre de card */
-h3 {
-  font-size: 14px;
-}
-
-ul {
-  list-style-type: none;
-}
-
-body {
-  font-family: "Raleway", serif;
-  display: flex;
-  flex-direction: column;
-}
-
-/* Pour chaque étoile "vide" */
-.empty-star {
-  color: #d9d9d9;
-}
-
-/* Prix hébergement */
-.price {
-  font-size: 13px;
-}
-
-/* Quand un prix est bas */
-.hot-price {
-  font-weight: bold;
-}
-
 /* Note étoiles */
 .rating {
   width: initial;
-  color: #0065fc;
-  display: flex;
   justify-content: initial;
-}
-
-.fa-star {
-  font-size: 11px;
 }
 
 /* || HEADER */
@@ -58,14 +12,11 @@ header {
   width: 100%;
   margin: 0 0 0 0;
   flex-direction: column;
-  justify-content: space-between; /* Pour avoir le logo tout à gauche et le nav tout à droite */
   align-items: center;
 }
 
 /* Logo */
 header img {
-  width: 95.5px;
-  height: 45px;
   margin: 10px 0 0 12%;
 }
 
@@ -75,11 +26,7 @@ nav {
 }
 
 header ul {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
   text-align: center;
-  display: flex;
   justify-content: initial; /* Chaque élément de la liste est réparti équitablement. Un espace est appliqué à chaque extrémité. */
   align-items: initial; /* On aligne en bas */
 }
@@ -97,16 +44,10 @@ header li:hover {
   border-bottom: 4px solid #0065fc;
 }
 
-/* Hébergements et Activités deviennent bleu au passage de la souris */
-header li:hover a {
-  color: #0065fc;
-}
-
 /* || MAIN */
 main {
   width: 100%;
   margin: 4% auto 5% auto;
-  flex: 1 0 auto;
 }
 
 .search-filters {
@@ -114,28 +55,16 @@ main {
   margin: 0 auto 0 auto;
 }
 
-/* "En plein centre ville..." */
-.search-filters p {
-  font-size: 16px;
-  font-weight: normal;
-}
-
 /* || BARRE DE RECHERCHE */
 
 .search-bar {
   margin: 30px 0 0 0;
-  display: flex;
 }
 
 .fa-location-dot {
   height: 45px;
   width: 45px;
   border-radius: 15px 0 0 15px;
-  background-color: #f2f2f2;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-shrink: 0;
 }
 
@@ -143,23 +72,13 @@ main {
 .search {
   min-width: 180px;
   height: 45px;
-  border: 0px;
-  border-top: 1px solid #f2f2f2;
-  border-bottom: 1px solid #f2f2f2;
-  padding: 0 0 0 16px; /* On se décale un peu de la gauche */
-  font-size: 16px;
-  font-weight: bold;
 }
 
 .search-button {
   width: 45px;
   margin: 0 0 0 0;
   border-radius: 15px 15px 15px 15px;
-  border: 0px solid;
-  background-color: #0065fc;
-  font-size: 16px;
   font-weight: initial;
-  color: #ffffff;
   flex-shrink: 0;
 }
 
@@ -170,23 +89,8 @@ main {
 
 /* || FILTRES ET RESULTATS */
 
-.filters-results {
-  height: 112px;
-  max-width: 929px;
-  margin: 0 0 0 1%;
-}
-
 .filters-list {
   margin: 30px 0 0 0;
-  display: flex; /* Permettre à la phrase de revenir à la ligne */
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-/* "Filtres" */
-.filters-list span {
-  font-weight: bold; /* "Filtres" en gras */
-  font-size: 17px;
 }
 
 .filters-list span:first-child {
@@ -197,37 +101,12 @@ main {
 /* Chaque filtre */
 .filters {
   margin: 5px 1% 10px 0;
-  border: 2px solid #d9d9d9;
-  border-left: 0px;
-  border-radius: 100px 100px 100px 100px; /* On arrondit les coins */
-  background-color: #ffffff;
-  color: #000000;
-  font-weight: bold;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 /* Logo filtre */
 .filters .fa-solid {
   width: 40px;
   height: 40px;
-  background-color: #deebff;
-  border-radius: 100px 100px 100px 100px; /* Cercle */
-  color: #0065fc;
-  font-size: 17px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.filters:hover {
-  background-color: #0065fc;
-  color: #ffffff;
-}
-
-.filters:hover .fa-solid {
-  color: #0065fc; /* On laisse l'icone en bleu */
 }
 
 /* Intitulé filtre */
@@ -239,32 +118,18 @@ main {
 /* Dimensions de la div avec logo + phrase */
 .results {
   margin: 20px 0 0 0;
-  display: flex;
   align-items: initial;
 }
 
 .fa-info {
   width: 20px;
   height: 20px;
-  border-radius: 100px 100px 100px 100px; /* Cercle */
-  border: 1px solid #d9d9d9;
-  font-size: 12px;
-  color: #0065fc;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex-shrink: 0;
-}
-
-/* Phrase nombre de résultats */
-.results p {
-  margin: 0 0 0 10px;
 }
 
 /* Div hébergements et populaires */
 .lodgings-popular {
   margin: 30px 0 0 0;
-  display: flex;
   flex-direction: column;
   justify-content: initial;
 }
@@ -288,76 +153,29 @@ main {
 
 /* "Hébergements à Marseille" */
 #lodgings h2 {
-  width: 100%;
   margin: 40px 0 7px 0;
 }
 
 .lodging-list {
   margin: 8% 0 0 0;
-  display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
 }
 
 /* Encadré blanc card hébergement */
 .lodging-list a {
-  width: 100%;
-  max-width: 282px;
+  width: 94%;
+  max-width: 300px;
   margin: 0 0 4% 0;
-  padding: 5px;
-  border-radius: 20px 20px 20px 20px;
-  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
-    0px -4px 6px #eaeaea;
-  background-color: #ffffff;
-}
-
-/* Card hébergement */
-.lodging {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .lodging-image {
-  height: 110px;
-}
-
-/* Miniature de card hébergement */
-.lodging img {
-  width: 100%;
-  height: 100%;
-  border-radius: 20px 20px 0 0;
-  object-fit: cover;
-}
-
-.lodging figcaption {
-  padding: 0 0 0 4%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.lodging h3 {
-  padding: 4% 0 0 0;
-}
-
-.lodging .price {
-  padding: 1% 0 0 0;
-}
-
-.lodging .rating {
-  padding: 3% 0 3% 0;
+  height: 105px;
 }
 
 /* "Afficher plus" */
 .show-more {
-  width: 100%;
   margin: 20px 0 5% 0;
-  font-size: 16px;
-  font-weight: bold;
 }
 
 /* || LES PLUS POPULAIRES */
@@ -366,81 +184,44 @@ main {
   width: initial;
   border-radius: 0; /* Arrondi bordure */
   padding: 0 6% 5% 6%;
-  background-color: #f2f2f2;
   flex-shrink: initial;
 }
 
 /* "Les plus populaires" */
 .most-popular h2 {
   margin: 30px 0 7px 0;
-  display: inline-block;
 }
 
 /* Etoile "Les plus populaires" */
 .most-popular-star {
   margin: 30px 0 7px 0;
-  font-size: 20px;
-  float: right;
 }
 
 .popular-list {
   margin: 6% 0 0 0;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-between;
   align-items: center;
 }
 
 /* Encadré blanc card populaire */
 .popular-list a {
-  width: 100%;
-  max-width: 334px;
+  width: 94%;
+  max-width: 300px;
   margin: 0 0 3% 0;
-  padding: 5px;
-  border-radius: 20px 20px 20px 20px;
-  background-color: #ffffff;
-  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
-    0px -4px 6px #eaeaea;
-}
-
-/* Card populaire */
-.popular {
-  display: flex;
-  justify-content: space-between;
 }
 
 .popular-image {
-  width: 120px;
-  height: 130px;
-}
-
-/* Miniature card populaire */
-.popular img {
-  width: 100%;
-  height: 100%;
-  border-radius: 20px 0 0 20px;
-  object-fit: cover;
+  width: 114px;
+  height: 120px;
 }
 
 /* Légende card populaire */
 .popular figcaption {
   padding: 0 0 0 6%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  flex: 1;
 }
 
 .popular h3 {
-  width: 85%;
+  width: initial;
   padding: 6% 0 0 0;
-}
-
-/* Prix populaire */
-.popular .price {
-  padding: 5% 0 0 0;
-  flex-grow: 1;
 }
 
 /* Note populaire */
@@ -463,23 +244,14 @@ main {
 .activities-list {
   height: initial;
   margin: 40px 0 0 0;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
 }
 
 /* Encadré blanc card activité */
 .activities-list a {
-  width: 100%;
-  max-width: 294px;
-  height: 100%;
+  width: 94%;
+  max-width: 300px;
   margin: 0 0 7% 0;
   border-radius: 30px 30px 30px 30px;
-  background-color: #ffffff;
-  box-shadow: 8px 0px 6px #eaeaea, 0px 8px 6px #eaeaea, -4px 0px 6px #eaeaea,
-    0px -4px 6px #eaeaea;
 }
 
 /* Encadré 2eme card */
@@ -504,38 +276,28 @@ main {
 
 /* Miniature 2eme card */
 .activities-list a:nth-child(2) img {
-  height: 108px;
+  height: 120px;
 }
 
 /* Miniature 3eme card */
 .activities-list a:nth-child(3) img {
-  height: 108px;
+  height: 120px;
 }
 
 /* Miniature 5eme card */
 .activities-list a:nth-child(5) img {
-  height: 108px;
+  height: 120px;
 }
 
 /* Miniature 6eme card */
 .activities-list a:nth-child(6) img {
-  height: 108px;
-}
-
-/* Card activité */
-.activity {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  height: 120px;
 }
 
 /* Miniature card activité */
 .activity img {
-  width: 100%;
-  max-width: 294px;
-  height: 108px;
-  border-radius: 20px 20px 0 0;
-  object-fit: cover;
+  max-width: 300px;
+  height: 120px;
   flex-grow: 1;
 }
 
@@ -546,30 +308,20 @@ main {
 
 /* || Footer */
 
-footer {
-  background-color: #f2f2f2;
-  flex-shrink: 0;
-}
-
 .footer-list {
   width: 90%;
-  margin: 0 auto 0 auto;
   padding: 10% 2% 6% 4%;
-  display: flex;
   flex-direction: column;
 }
 
 /* Tout le contenu de chaque div */
 footer li {
   margin: 0 0 13px 0;
-  font-size: 15px;
 }
 
 /* Titre de liste */
 footer p {
   margin: 0 0 20px 0;
-  font-size: 17px;
-  font-weight: bold;
 }
 
 /* Espacement entre A propos et Nos Hébergements */
